@@ -140,6 +140,11 @@ void R_ProcessEvents(void)
     if(R_Tcl_do) R_Tcl_do();
 }
 
+void R_WaitEvent(void)
+{
+    if (!peekevent()) waitevent();
+}
+
 
 /*
  *  1) FATAL MESSAGES AT STARTUP
@@ -285,7 +290,7 @@ ThreadedReadConsole(const char *prompt, char *buf, int len, int addtohistory)
     thist = addtohistory;
     SetEvent(EhiWakeUp);
     while (1) {
-	if (!peekevent()) WaitMessage();
+	R_WaitEvent();
 	if (lineavailable) break;
 	doevent();
 	if(R_Tcl_do) R_Tcl_do();
